# twitter-tracker

./: .gitignore  .replit  README.md  bot.py  config.py  create_repo.py  database.py  generate_logo.py  main.py  pyproject.toml  schema.sql  telegram_bot.py  test_twitter.py  twitter_client.py  utils.py
cogs/: twitter_commands.py
static/css/: style.css
static/js/: animation.js
templates/: index.html
