[project]
name = "repl-nix-twittertracker-1"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.11",
    "discord-py>=2.4.0",
    "feedparser>=6.0.11",
    "flask>=3.1.0",
    "pillow>=11.1.0",
    "psycopg2-binary>=2.9.10",
    "python-telegram-bot>=21.10",
    "requests>=2.32.3",
    "telegram>=0.0.1",
    "twilio>=9.4.1",
]
